[package]
name = "atomicvec"
version = "0.1.0"
edition = "2024"


[dependencies]
thiserror = "2.0.17"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
non_snake_case = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
wildcard_imports = "deny"
undocumented_unsafe_blocks = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_html_tags = "warn"

