[package]
name = "growlock"
version = "0.1.0"
rust-version = "1.94.0"
edition = "2024"
authors = ["CieriA"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/CieriA/growlock-rs"

[dependencies]
thiserror = "2.0.17"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
unsafe_op_in_unsafe_fn = "deny"
non_snake_case = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
wildcard_imports = "deny"
undocumented_unsafe_blocks = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_html_tags = "warn"

